# internal/api/auth/verify_token.go
@@ -1,47 +1,0 @@
-package auth
-
-import (
-	"net/http"
-
-	"github.com/OutOfStack/game-library-auth/internal/web"
-	"github.com/gofiber/fiber/v2"
-	"go.uber.org/zap"
-)
-
-// VerifyTokenHandler 	godoc
-// @Summary 			Verify JWT token
-// @Description 		Validates a JWT token and returns if it's valid
-// @Tags 				auth
-// @Accept 				json
-// @Produce 			json
-// @Param 				token body VerifyTokenReq true "Token to verify"
-// @Success 			200 {object} VerifyTokenResp
-// @Failure 			400 {object} web.ErrResp
-// @Router 				/token/verify [post]
-func (a *API) VerifyTokenHandler(c *fiber.Ctx) error {
-	_, span := tracer.Start(c.Context(), "verifyToken")
-	defer span.End()
-
-	var verifyToken VerifyTokenReq
-	if err := c.BodyParser(&verifyToken); err != nil {
-		a.log.Error("parsing data", zap.Error(err))
-		return c.Status(http.StatusBadRequest).JSON(web.ErrResp{
-			Error: "Error parsing data",
-		})
-	}
-
-	if fields, err := web.Validate(verifyToken); err != nil {
-		a.log.Error("validating token", zap.Error(err))
-		return c.Status(http.StatusBadRequest).JSON(web.ErrResp{
-			Error:  validationErrorMsg,
-			Fields: fields,
-		})
-	}
-
-	// validate token
-	valid := a.userFacade.ValidateAccessToken(verifyToken.Token)
-
-	return c.JSON(VerifyTokenResp{
-		Valid: valid,
-	})
-}
